test/files/neg/t12813c.check
t12813c.scala:6: error: a is renamed twice to abcdefghij
import O.{a => abcdefghij, a => abcdefghij}
                                ^
1 error
